Adding README and fix on List of friends output

--- a/challenge.html
+++ b/challenge.html
@@ -21,7 +21,7 @@
         <input type="button" onclick="alterar()" value="Adicionar">
         <p>Amigos adicionados:</p>
         <p id="amigos"></p>
-        <input type="button" onclick="sortear()" value="Sortear">
+        <input type="button" onclick="sortear()" value="Sortear Amigo">
     </nav>
 
     <article>
@@ -40,7 +40,7 @@
 </section>
 
 <footer>
-  <p>Footer</p>
+    <p>Curso de Praticando Logica de programação: Challenge amigo secreto<br>Iniciante em Programação G8 - ONE<br>Oracle Next Education</p>
 </footer>
 
 
